2002-09-04  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.0.4

2002-09-04  Marius Andreiana <mandreiana@yahoo.com>

	* configure.in: added 'ro' to ALL_LINGUAS

2002-08-28  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.0.3

2002-08-21  Anju P S  <anju.premachandran@wipro.com>
 
 	* libgnome/gnome-exec.c (gnome_execute_async_with_env_fds) :
 	Added code to check the return value of the chdir() call.If chdir
 	call fails the child process may be executed in the wrong directoy.
 
2002-08-15  Mikael Hallendal  <micke@codefactory.se>

	* help-converters/man/gnome-man2html.c:
	(scan_table): applied patch from Kjaartan fixing #77895

2002-08-15  Padraig O'Briain  <padraig.obriain@sun.com>

	* help-converters/info/main.c:
	* help-converters/man/gnome-man2html.c:
	Remove setting of BGCOLOR when writing HTML body tag.
	(bug #90655)

2002-08-05  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.0.2

2002-07-29  Mark McLoughlin  <mark@skynet.ie>

	* monikers/bonobo-config-bag.c:
	(impl_Bonobo_PropertyBag_getKeys),
	(impl_Bonobo_PropertyBag_getType),
	(impl_Bonobo_PropertyBag_getValue),
	(impl_Bonobo_PropertyBag_setValue),
	(impl_Bonobo_PropertyBag_getValues),
	(impl_Bonobo_PropertyBag_getDefault),
	(impl_Bonobo_PropertyBag_getDocTitle),
	(impl_Bonobo_PropertyBag_getDoc),
	(impl_Bonobo_PropertyBag_getFlags): initialise GError* to NULL.
	Should fix crash seen in #89158.

2002-07-25  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Bosnian (bs) to ALL_LINGUAS

2002-07-11  Brian Cameron  <Brian.Cameron@sun.com>

	* libgnome/libgnome-2.0.pc.in
	* help-converters/gnome-vfs-module/Makefile.am
	* help-converters/gnome-vfs-module/help-method.c
	* help-converters/info/Makefile.am
	* help-converters/man/Makefile.am
	* help-converters/docbook/Makefile.am
	Now install gnome2-info2html, gnome2-man2html, and gnome2-db2html
	to libexec rather than bin.

2002-07-01  jacob berkman  <jacob@ximian.com>
