@@ -1,7 +1,7 @@
 AC_INIT(libgnome)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(libgnome, 2.0.4)
+AM_INIT_AUTOMAKE(libgnome, 2.0.5)
 
 AM_MAINTAINER_MODE
 
