@@ -1,3 +1,9 @@
+2002-09-09  Anders Carlsson  <andersca@gnu.org>
+
+	* libgnome/gnome-program.c: (gnome_program_initv):
+	Make gnome_program_module_register do what it's supposed
+	to do. (Patch from Matt Wilson)
+	
 2002-09-04  Anders Carlsson  <andersca@gnu.org>
 
 	* configure.in: Release 2.0.4
